# Xenobuild-proto

Xenobuild/: CMakeLists.txt
Xenobuild/src/: main.cpp
prototype/Xenobuild/: __main__.py  init.py
prototype/Xenobuild/init/: generator.py
